--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>DescicloGames</title>
-<body>
-    <h1>DescicloGames</h1>
-    <h2>O pior que podemos fazer por hora.</h2>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DescicloGames :: Home</title>
+  </head>
+  <body>
+      <script>
+        console.log("Ignore")
+      </script>
+
+  </body>
+</html>
